# docker-python-pip-issue

./: .dockerignore  Dockerfile  Dockerfile.rhel8  Dockerfile.ubuntu  README.md  pyproject.toml
scripts/: retry
your_project_name/: server.py
