[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.0.1"
authors = [{ name = "Hudson Mendes", email = "hudsonmendes@gmail.com" }]
description = "Final Project from University of London"
readme = "README.md"
license = { file = "LICENSE" }
urls = { homepage = "https://github.com/hudsonmendes/cm3070-fp" }
keywords = ["issues", "docker", "python"]
dependencies = ["fastapi", "uvicorn"]

[project.optional-dependencies]
dev = ["pytest", "black"]

[tool.setuptools]
package-dir = { "" = "src" }
